--- a/books/850b20937af93b/15-1.md
+++ b/books/850b20937af93b/15-1.md
@@ -2,81 +2,75 @@
 title: "15.1 Haskellでの米田"
 ---
 
+我々はすでにHaskellで、Reader関手の装いをしたHom関手に出会っている:
 
-We have already encountered the hom-functor in Haskell under the guise
-of the reader functor:
+```haskell
+type Reader a x = a -> x
+```
 
-\src{snippet01}
-The reader maps morphisms (here, functions) by precomposition:
+Readerは射(ここでは関数)を前への合成によって写す:
 
-\src{snippet02}
-The Yoneda lemma tells us that the reader functor can be naturally
-mapped to any other functor.
+```haskell
+instance Functor (Reader a) where
+    fmap f h = f . h
+```
 
-A natural transformation is a polymorphic function. So given a functor
-\code{F}, we have a mapping to it from the reader functor:
+米田の補題は、Reader関手は自然にどんな他の関手にも写せるということを教えてくれる。
 
-\src{snippet03}
-As usual, \code{forall} is optional, but I like to write it explicitly
-to emphasize parametric polymorphism of natural transformations.
+自然変換は多相関数である。なので、関手`F`が与えられると、そこへのReader関手からの写像ができる:
 
-The Yoneda lemma tells us that these natural transformations are in
-one-to-one correspondence with the elements of \code{F a}:
+```haskell
+alpha :: forall x . (a -> x) -> F x
+```
 
-\begin{snipv}
-forall x . (a -> x) -> F x \ensuremath{\cong} F a
-\end{snipv}
-The right hand side of this identity is what we would normally consider
-a data structure. Remember the interpretation of functors as generalized
-containers? \code{F a} is a container of \code{a}. But the left
-hand side is a polymorphic function that takes a function as an
-argument. The Yoneda lemma tells us that the two representations are
-equivalent --- they contain the same information.
+いつもどおり`forall`はオプションだが、自然変換でできたパラメータ多相であることを明示的に強調するために、私は書いておくほうが好きだ。
 
-Another way of saying this is: Give me a polymorphic function of the
-type:
+米田の補題はこれら自然変換が`F a`の元と一対一対応にあるということを教えてくれる:
 
-\src{snippet04}
-and I'll produce a container of \code{a}. The trick is the one we used
-in the proof of the Yoneda lemma: we call this function with \code{id}
-to get an element of \code{F a}:
+```haskell
+forall x . (a -> x) -> F x ≅ F a
+```
 
-\src{snippet05}
-The converse is also true: Given a value of the type \code{F a}:
+この等式の右辺は普通自然変換と考えるものである。関手の解釈は一般化されたコンテナだということを覚えているだろうか？`F a`は`a`のコンテナである。しかし、左辺は関数を引数として取る多相関数である。米田の補題はこの2つの解釈は等価であること---同じ情報を持っていること---を教えてくれる。
 
-\src{snippet06}
-one can define a polymorphic function:
+別の言いかたはこうだ: 次の型の多相関数を与えよ:
 
-\src{snippet07}
-of the correct type. You can easily go back and forth between the two
-representations.
+```haskell
+alpha :: forall x . (a -> x) -> F x
+```
 
-The advantage of having multiple representations is that one might be
-easier to compose than the other, or that one might be more efficient in
-some applications than the other.
+さすれば`a`のコンテナを与えよう。トリックは米田の補題の証明で使ったやつだ: この関数を`\mathrm{id}`で呼びだし、`F aの元を得る:
 
-The simplest illustration of this principle is the code transformation
-that is often used in compiler construction: the continuation passing
-style or \acronym{CPS}. It's the simplest application of the Yoneda lemma to the
-identity functor. Replacing \code{F} with identity produces:
+```haskell
+alpha id :: F a
+```
 
-\begin{snipv}
-forall r . (a -> r) -> r \ensuremath{\cong} a
-\end{snipv}
-The interpretation of this formula is that any type \code{a} can be
-replaced by a function that takes a ``handler'' for \code{a}. A
-handler is a function accepting \code{a} and performing the rest of
-the computation --- the continuation. (The type \code{r} usually
-encapsulates some kind of status code.)
+逆もまた真である: `F a`型の値を与えられると:
 
-This style of programming is very common in UIs, in asynchronous
-systems, and in concurrent programming. The drawback of \acronym{CPS} is that it
-involves inversion of control. The code is split between producers and
-consumers (handlers), and is not easily composable. Anybody who's done
-any amount of nontrivial web programming is familiar with the nightmare
-of spaghetti code from interacting stateful handlers. As we'll see
-later, judicious use of functors and monads can restore some
-compositional properties of \acronym{CPS}.
+```haskell
+fa :: F a
+```
+
+正しい型の多相関数が定義できる:
+
+```haskell
+alpha h = fmap h fa
+```
+
+これら2つの表現を行ったり来たりできるのだ。
+
+複数の表現ができることの利点は、一方は他方より合成が簡単かもしれず、また一方は他方より応用上効率的かもしれないことだ。
+
+この原理の最も簡単な描像は、コンパイラ構成法でしばしば用いられるコード変換である、継続渡しスタイル(Continuation Passing Style, 略してCPS)である。これは米田の補題の恒等関手への最も簡単な応用である:
+
+```haskell
+forall r . (a -> r) -> r ≅ a
+```
+
+この公式は、どんな型`a`も`a`の「ハンドラ」を取る関数で置き換えることができると解釈できる。ハンドラは`a`を受け付ける関数で、計算の残りを実行するもの---継続である(型`r`は普通、なんらかの状態コードをカプセル化している)。
+
+このスタイルのプログラミングはUIや非同期システム、並行プログラミングではとてもよくあることである。CPSの欠点は、制御の逆転を含んでいることである(？)。コードは生産者と消費者(ハンドラ)に分割され、それらは容易には合成できない。自明でないWebプログラミングを少しでもやったことのある人は、状態を持つハンドラとやりとりするスパゲティコードの悪夢はおなじみだろう。後でみるように、関手とモナドを賢く使えば、CPSの合成の性質をいくらか取り戻すことができる。
+
 
 
 （和訳：[@ashiato45](https://twitter.com/ashiato45)）
