りさんけん

--- a/books/850b20937af93b/15-3.md
+++ b/books/850b20937af93b/15-3.md
@@ -13,8 +13,8 @@ psi :: F a -> (forall x . (a -> x) -> F x)
 psi fa h = fmap h fa
 ```
 
-2. 離散圏は対象を持つが恒等射の他に射を持たないものである。米田の補題はそのような圏でどのように働くだろうか？
-3. Unitのリスト$[()]$は長さの他に情報を持たない。なので、データ構造としては整数のエンコーディングと考えられる。空リストは0をエンコードし、1元リスト$[()]$(これは型ではなく値である)は1をエンコードしし、などな。米田の補題をリスト関手に使い、このデータ型の別の表現を構成せよ。
+2. 離散圏、は対象を持つが恒等射の他に射を持たない圏である。米田の補題はそのような圏でどのように働くだろうか？
+3. Unitのリスト$[()]$は長さの他に情報を持たない。なので、データ構造としては整数のエンコーディングと考えられる。空リストは0をエンコードし、1元リスト$[()]$(これは型ではなく値である)は1をエンコードし、などなど。米田の補題をリスト関手に使い、このデータ型の別の表現を構成せよ。
 
 
 # 参考文献
