--- a/books/850b20937af93b/15-0.md
+++ b/books/850b20937af93b/15-0.md
@@ -4,15 +4,15 @@ title: "15 米田の補題"
 
 原文：[5. The Yoneda Lemma ](https://bartoszmilewski.com/2015/09/01/the-yoneda-lemma/)
 
-圏論でのほとんどの構成は他の数学の特定分野の結果の一般化である。積、余積、モノイド、羃などのは圏論のずっと前から知られていた。これらは様々な数学の分野で異なる名前で知られていたかもしれない。集合論での直積(Cartesian product)[^1]、順序論での交わり(meet)、論理学での連言(conjunction) --- これらはすべて圏論的な積の抽象的な概念の具体例になっている。
+圏論でのほとんどの構成は他の数学の特定分野の結果の一般化である。積、余積、モノイド、羃などは圏論のずっと前から知られていた。これらは数学の様々な分野で異なる名前で知られていたかもしれない。集合論での直積(Cartesian product)[^1]、順序論での交わり(meet)、論理学での連言(conjunction) --- これらはすべて圏論的な積の抽象的な概念の具体例になっている。
 
 米田の補題はこの点では、他の数学の分野ではほとんど、あるいは全く先例のない、圏たち一般全体に関する主張として際立っている。米田の補題の一番近い喩えは、群論でのケーリー(Cayley)の定理であるという人もいる(任意の群はある集合の置換群に同型である[^2])。
 
 米田の補題の設定は任意の圏$\mathbf{C}$と、$\mathbf{C}$から$\mathrm{Set}$への関手$F$についてのものである。前の章では、いくらかの$\mathrm{Set}$値関手は表現可能、つまりあるHom関手に同型であるということを見た。米田の補題は、任意の$\mathrm{Set}$値関手は自然変換を通じてHom関手から得られるということを教えてくれて、しかもそのような変換を明示的に列挙してくれる。
 
-私が自然変換について話したとき、自然性条件は極めて制限の強いものになりうるということを述べた。ある対象について自然変換の成分を定義するとき、自然性はこの成分を、射でつながっているもう1つの対象に「送る」のに十分強い性質かもしれない。定義域と値域となる圏たちに対象間の矢があればあるほど、自然変換の成分を送るための制約は強くなる。図らずも$\mathrm{Set}$はとても矢の豊富な圏なのだ。
+私が自然変換について話したとき、自然性条件は極めて制限の強いものになりうるということを述べた。ある対象について自然変換の成分を定義するとき、自然性はこの成分を、射でつながっているもう1つの対象に「送る」のに十分強い性質かもしれない。始域と終域となる圏たちに対象間の矢があればあるほど、自然変換の成分を送るための制約は強くなる。図らずも$\mathrm{Set}$はとても矢の豊富な圏なのだ。
 
-米田の補題は、Hom関手と任意の他の関手$F$との間の自然変換は、たった1点で1つの成分の値を指定することで完全に決定されてしまうということを教えてくれるのだ！自然変換の残りは、自然性条件から従うだけなのである。
+米田の補題は、Hom関手と任意の他の関手$F$との間の自然変換がたった1点で1つの成分の値を指定するだけで完全に決定されてしまうということを教えてくれるのだ！自然変換の残りは、自然性条件から従うだけなのである。
 
 さて、米田の補題で扱う2つの関手の間の自然性条件について復習しよう。1つ目の関手はHom関手だ。この関手は$\mathbf{C}$の任意の対象$x$を射の集合$\mathbf{C}(a, x)$に写す。ここで$a$は$\mathbf{C}$の中で固定した対象である。さらに、この関手は$x$から$y$への任意の射$f$を$\mathbf{C}(a, f)$に写すことも見たのだった。
 
@@ -63,9 +63,9 @@ $$
 \alpha_y f = (F f) (\alpha_a \mathrm{id}_a)
 $$
 
-何が起こったかに注意しよう: 左辺は$\mathbf{C}(a, y)$の任意の元$f$への$\alpha_y$の作用である。そして、これは$\mathrm{id}_a$での$\alpha_a$の値ただ1つによって完全に決定される。その値をどのように選んでも、それが1つの自然変換を生成する。$\alpha_a$の値は$集合F a$の元なので、$F a$のどの点も何か$\alpha$を定めることになる。
+何が起こったかに注意しよう: 左辺は、$\mathbf{C}(a, y)$の任意の元$f$への、$\alpha_y$の作用である。そして、これは$\mathrm{id}_a$での$\alpha_a$の値ただ1つによって完全に決定される。その値をどのように選んでも、それが1つの自然変換を生成する。$\alpha_a$の値は集合$F a$の元なので、$F a$のどの点も何か$\alpha$を定めることになる。
 
-反対に、任意に$\mathbf{C}(a, -)$から$F$への任意の自然変換$\alpha$が与えられたとき、それを$\mathrm{id}_a$で評価して$F a$の点を1つ得ることができる。
+反対に、任意に$\mathbf{C}(a, -)$から$F$への自然変換$\alpha$が与えられたとき、それを$\mathrm{id}_a$で評価して$F a$の点を1つ得ることができる。
 
 これで米田の補題が示せた:
 
@@ -86,35 +86,35 @@ $$
 
 あとで、この対応が実は自然変換であることを説明しよう。
 
-さて、この結果についての直観を得てみたい。一番驚くべきことは、たった1つの核、すなわち$\mathrm{id}_a$に割り当てる値から結晶のよゆに自然変換全体ができあがることだ。この点から自然性条件に従って自然変換が広がるのである。$\mathbf{C}$の像が$\mathrm{Set}$にみなぎる。まず最初に$\mathbf{C}$の$\mathbf{C}(a, -)$での像がどうなるかを考えてみよう。
+さて、この結果についての直観を得てみたい。一番驚くべきことは、たった1つの中核、すなわち$\mathrm{id}_a$に割り当てる値から、結晶のように自然変換全体ができあがることだ。この点から自然性条件に従って自然変換が広がるのである。$\mathbf{C}$の像が$\mathrm{Set}$にみなぎる。まず最初に$\mathbf{C}$の$\mathbf{C}(a, -)$での像がどうなるかを考えてみよう。
 
-まず$a$それ自身の像から始める。Hom関手$\mathbf{C}(a, -)$のもとで、$a$は集合$\mathbf{C}(a, a)$に写される。他方、関手$F$のもとで$a$は$F a$に写される。自然変換の成分$\alpha_a$は$\mathbf{C}(a, a)$から$F a$への何らかの関数である。集合$\mathbf{C}(a, a)$の$\mathrm{id}_a$に対応する1点だけに注目してみよう。これが集合のただの1点であることを強調するために、これを$p$とよぼう。成分$\alpha_a$は$p$を$F a$の何らかの点$q$に写すことになる。これから、どんな$q$を選んでもただ1つの自然変換ができることを示そう。
+まず$a$それ自身の像から始める。Hom関手$\mathbf{C}(a, -)$のもとで、$a$は集合$\mathbf{C}(a, a)$に写される。他方、関手$F$のもとで$a$は$F a$に写される。自然変換の成分$\alpha_a$は$\mathbf{C}(a, a)$から$F a$への何らかの関数である。集合$\mathbf{C}(a, a)$の$\mathrm{id}_a$に対応する1点にだけ注目してみよう。これが集合のただの1点であることを強調するために、これを$p$とよぼう。成分$\alpha_a$は$p$を$F a$の何らかの点$q$に写すことになる。これから、どんな$q$を選んでもただ1つの自然変換ができることを示そう。
 
 
 ![](https://storage.googleapis.com/zenn-user-upload/62f6346a7a5a8290ff44a913.png)
 
-最初の主張は、1点$q$を選ぶと$\alpha_a$の残りの部分が唯一定まることだ。実際、$a$から$a$へのある射$g$に対応する(つまり$\mathbf{C}(a, a)$に属している)任意の他の点$p'$を選ぼう。すると、ここで米田の補題の魔法が使える: $g$は集合$\mathbf{C}(a, a)$の点$p'$と見ることができる。それと同時に、$g$は集合の間の *関数* を2つ選ぶ。実際、Hom関手によって射$g$は関数$\mathbf{C}(a, g)$に写り、$F$によって$F g$に写る。
+最初の主張は、1点$q$を選ぶと$\alpha_a$の残りの部分が唯一定まることだ。実際、$a$から$a$へのある射$g$に対応する(つまり$\mathbf{C}(a, a)$に属している)任意の他の点$p'$を選ぼう。すると、ここで米田の補題の魔法が使える: $g$は集合$\mathbf{C}(a, a)$の点$p'$と見ることができる。それと同時に、$g$は集合の間の *関数* を2つ選ぶことになる。実際、Hom関手によって射$g$は関数$\mathbf{C}(a, g)$に写り、$F$によって$F g$に写る。
 
 
 ![](https://storage.googleapis.com/zenn-user-upload/983da5afdbcf802a0aa33e54.png)
 
 さて、$\mathbf{C}(a, g)$の元々の$p$への作用を考えよう。覚えているだろうけれども、$p$は$\mathrm{id}_a$に対応する。$\mathbf{C}(a, g)$の作用は前への合成$g\circ \mathrm{id}_a$として定義され、これは$g$に等しい。そしてこれは点$p'$に対応する。したがって、射$g$は、$p$に作用すると$p'$(これはつまり$g$)になるような関数に写される。一周してもとに戻ってきた！
 
-次に$q$への$F g$の作用を考えよう。作用した結果が$F a$のなにかの点$q'$だとする。自然性の四角形を完成させるために、$p'$は$\alpha_a$のもとで$q'$に写されなければいけない。$p'$は任意に選んでおり(これは任意の$g$)、$q'$は$\alpha_a$のもとで$p$に由来している。これで、関数$\alpha_a$は完全に決定された。
+次に$q$への$F g$の作用を考えよう。作用した結果が$F a$のなにかの点$q'$だとする。自然性の四角形を完成させるために、$p'$は$\alpha_a$のもとで$q'$に写されなければいけない。$p'$は任意に選んでおり(これは任意の$g$)、$q'$は$\alpha_a$のもとで$p'$に由来している。これで、関数$\alpha_a$は完全に決定された。
 
-2つ目の主張は、$\mathbf{C}$の任意の対象$x$で$a$につながっているものについて、$\alpha_x$が唯一に決定されることである。この推論は、以下の点を除けば類似している: 今回は$\mathbf{C}(a, x)$と$F x$という2つの集合があり、$a$から$x$への射$g$はHom関手で
+2つ目の主張は、$\mathbf{C}$の任意の対象$x$で$a$につながっているものについて、$\alpha_x$が唯一に決定されることである。この推論は、以下のことを除けば類似している: 今回は$\mathbf{C}(a, x)$と$F x$という2つの集合があり、$a$から$x$への射$g$はHom関手で
 
 $$
-\cat{C}(a, g) \Colon \cat{C}(a, a) \to \cat{C}(a, x)
+\mathbf{C}(a, g) \mathtt{::}\   \mathbf{C}(a, a) \to \mathbf{C}(a, x)
 $$
 
 に写され、$F$で
 
 $$
-F g \Colon F a \to F x
+F g \mathtt{::}\   F a \to F x
 $$
 
-に写される点。再び、$p$への$\mathbf{C}(a, g)$の作用は前からの合成$g\circ \mathrm{id}_a$で定義され、これは$\mathbf{C}(a, x)$の点$p'$に対応する。自然性は、$p'$に$\alpha_x$が作用した値が
+に写されること。再び、$p$への$\mathbf{C}(a, g)$の作用は前への合成$g\circ \mathrm{id}_a$で定義され、これは$\mathbf{C}(a, x)$の点$p'$に対応する。自然性は、$p'$に$\alpha_x$が作用した値が
 
 $$
 q' = (F g) q
