--- a/books/850b20937af93b/15-3.md
+++ b/books/850b20937af93b/15-3.md
@@ -4,7 +4,7 @@ title: "15.3 演習問題/参考文献"
 
 # 演習問題
 
-1. Haskellで米田同型をなす2つの関数`phi`と`psi`が互いに逆であることを示せ。
+1. Haskellで米田同型をなす2つの関数`phi`と`psi`が互いに逆であることを示せ．
 ```haskell
 phi :: (forall x . (a -> x) -> F x) -> F a
 phi alpha = alpha id
@@ -13,8 +13,8 @@ psi :: F a -> (forall x . (a -> x) -> F x)
 psi fa h = fmap h fa
 ```
 
-2. 離散圏は対象を持つが恒等射の他に射を持たない圏である。米田の補題はそのような圏でどのように働くだろうか？
-3. Unitのリスト$[()]$は長さの他に情報を持たない。なので、データ構造としては整数のエンコーディングと考えられる。空リストは0をエンコードし、1元リスト$[()]$(これは型ではなく値である)は1をエンコードし、などなど。米田の補題をリスト関手に使い、このデータ型の別の表現を構成せよ。
+2. 離散圏は対象を持つが恒等射の他に射を持たない圏である．米田の補題はそのような圏でどのように働くだろうか？
+3. Unitのリスト$[()]$は長さの他に情報を持たない．なので，データ構造としては整数のエンコーディングと考えられる．空リストは0をエンコードし，1元リスト$[()]$(これは型ではなく値である)は1をエンコードし，などなど．米田の補題をリスト関手に使い，このデータ型の別の表現を構成せよ．
 
 
 # 参考文献
