タイポ修正、他の章と表記の統一

--- a/books/850b20937af93b/3-4.md
+++ b/books/850b20937af93b/3-4.md
@@ -38,7 +38,7 @@ class Monoid m where
 ```
 二変数関数のための型シグネチャ'm -> m -> m'は最初奇妙に見えるかもしれないが、カリー化について説明した後には完全に理にかなったものになるだろう。複数の矢印を持つシグネチャーは二つの基本的な方法で解釈することができる。一つは複数の変数を持ち最も右の型が返り値の型である関数として、もう一つは一つの引数（最も左の形）を持つ関数で、関数を返すものとして。後者の解釈は'm -> (m -> m)'のようにカッコをつけることで強調することもできる。（しかし、矢印は右結合的なのでこれは冗長である）次のように。この解釈については少し後でまた戻ってくる。
 
-注意として、Haskellにおいて、'mempty'と'mappend'のモドイドとしての性質（つまり、'mempty'が単位元であり、'mappend'が結合的であるという事実）を表現する方法はない。それらが満たされることを確かめるのはプログラマの責任である。
+注意として、Haskellにおいて、'mempty'と'mappend'のモノイドとしての性質（つまり、'mempty'が単位元であり、'mappend'が結合的であるという事実）を表現する方法はない。それらが満たされることを確かめるのはプログラマの責任である。
 
 Haskellの型はC++の型ほど煩わしくない。新しい型を定義するときに、そのクラスを前もって特定する必要はない。自由に先延ばしにできるし、与えられた型をかなり後になって定義されるクラスのインスタンスとして宣言できる。例えば、'String'を'mempty'と'mappend'の実装を与えてモノイドとして宣言しよう。（実際、これは標準プレリュードでなされているものである）
 ```haskell
@@ -68,7 +68,7 @@ mappend s1 s2 = (++) s1 s2
 ```
 前者は圏$\mathbf{Hask}$における射の一致に翻訳できる。（あるいは、もし決して終わらない計算を表すものであるbottomsを無視するなら、圏$\mathbf{Set}$において。）そのような等式は単に簡潔であるというだけでなく、しばしば他の圏に一般化される。後者は**外延的な**(extensional)一致と呼ばれ、いかなる二つの入力文字列についてその'mappend'と'(++)'の出力が一致することを主張する。引数の値は時々**点**(points)と呼ばれることがある（$f$の点$x$での値、というように）ため、このことは点ごとの一致と呼ばれる。引数を特定することのない関数の相等は**点なし**(point-free)と記述される。（ちなみに、点なし等式はしばしば関数の合成を伴い、それは点という記号を用いて表されるため、少しだけ初心者には混乱を引き起こすかもしれない。）
 
-C++でモノイドを宣言できる最も近い方法はコンセプトの文法（提案されている）を使うことだよう。
+C++でモノイドを宣言できる最も近い方法はコンセプトの文法（提案されている）を使うことだろう。
 ```cpp
 template<class T>
 struct mempty;
@@ -82,7 +82,7 @@ concept Monoid = requires (M m) {
     { mappend(m, m) } -> std::same_as<M>;
 };
 ```
-最初の定義では値テンプレート(これも提案されている)を使っている。ポリモーフィックな値は値の族である、つまり全ての型に対して異なる値を持つ。
+最初の定義では値テンプレート(これも提案されている)を使っている。多相的な(polymorphic)値は値の族である、つまり全ての型に対して異なる値を持つ。
 
 'delete'キーワードはデフォルトの定義された値が存在しないことを意味する。それは個々の場合に応じて特定される。同様に、'mappend'についてもデフォルトの値は存在しない。
 
