fix: for natural Japanese

--- a/books/850b20937af93b/8-2.md
+++ b/books/850b20937af93b/8-2.md
@@ -9,7 +9,7 @@ instance Bifunctor (,) where
   bimap f g (x, y) = (f x, g y)
 ```
 
-`bimap` はひとつめの関数をひとつめの要素に適用し，ふたつめの要素をふたつめの要素に適用している．実のところ他の選択肢はほとんどない．そしてこのコードから芋づる式に周辺のコードが生み出される．^[原文 The code pritty much writes itself.] 型は次のようになる．
+この `bimap` はひとつめの関数をひとつめの要素に適用し，ふたつめの要素をふたつめの要素に適用する．実のところ他の選択肢はほとんどない．そしてこのコードから芋づる式に周辺のコードが生み出される^[原文 The code pritty much writes itself.]． `bimap` の型はこうだ．
 
 ```haskell
 bimap :: (a -> c) -> (b -> d) -> (a, b) -> (c, d)
@@ -31,6 +31,6 @@ instance Bifunctor either whree
 
 このコードからも芋づる式に周辺のコードが生み出される．
 
-ところで，以前話したモノイド圏について覚えているだろうか？ モノイド圏は二項演算子と単位元によって定義されるのだった．以前の議論では「 $\mathbf{Set}$ はカルテジアン積（という二項演算子）と，単集合（という単位元）を持つモノイド圏である」という話だった．だがここまでの議論を踏まえると「 $\mathbf{Set}$ は直和と空集合によるモノイド圏である」という見方もできる．まだ話していなかったが，モノイド圏の演算子は双関手でなければならない．これは，射により定義される圏の構造とモノイド積が共存するための非常に重要な条件である．次は，モノイド圏の完全な定義についてもう一歩踏み込んでいこう．（その前に自然性について学ばなければならないが．）
+ところで，以前話したモノイド圏を覚えているだろうか？ モノイド圏は二項演算子と単位元によって定義されるのだった．以前の議論では「 $\mathbf{Set}$ はカルテジアン積（という二項演算子）と，単集合（という単位元）を持つモノイド圏である」ということだった．だがここまでの議論を踏まえると「 $\mathbf{Set}$ は直和と空集合によるモノイド圏である」という見方もできる．まだ話していなかったが，モノイド圏の演算子は双関手でなければならない．これは，射により定義される圏の構造とモノイド積が共存するための非常に重要な条件である．次は，モノイド圏の完全な定義についてもう一歩踏み込んでいこう．（その前に自然性について学ばなければならないが．）
 
 （和訳：[@takase](https://zenn.dev/takase)）
