--- a/books/850b20937af93b/8-4.md
+++ b/books/850b20937af93b/8-4.md
@@ -2,15 +2,15 @@
 title: "8.4 C++ の関手"
 ---
 
-もし読者が C++ プログラマなら，自分なりに関手を実装したことがあるかもしれない．しかし， C++ はもともといくつかの代数的データ型が持っている．もしそれらをテンプレートとして使えるなら， `fmap` を素早く実装できる．
+もし読者が C++ プログラマなら，自分なりに関手を実装したことがあるかもしれない．しかし， C++ はもともといくつかの代数的データ型を持っている．もしそれらをテンプレートとして使えるなら， `fmap` を素早く実装できる．
 
-木構造データ型を例に考えてみよう． Haskell では再帰的な直和で書ける．
+木構造データ型を例に考えてみよう． Haskell では再帰的な直和で書く．
 
 ```haskell
 data Tree a = Leaf a | Node (Tree a) (Tree b) deriving Functor
 ```
 
-先に述べたように， C++ で直和型を実装するにはクラス階層を使う．基本クラス `Functor` の `fmap` を仮想関数として実装し，サブクラスでオーバーライドさせるというのが，オブジェクト指向言語として自然なのだが，残念なことにこうはできない． `fmap` が，引数となるオブジェクトの型だけでなく，返り値の型（これは返り値の利用先で決まる）にも依存するのがその理由である． C++ では仮想関数はテンプレート化できない．そこで `fmap` を非メンバ関数として実装し，パターンマッチングは `dynamic_cast` で行う．
+先に述べたように， C++ で直和型を実装するにはクラス階層を使う．オブジェクト指向言語なので， `Functor` 基本クラスの仮想関数 `fmap` をサブクラスでオーバーライドする，というのが自然だが，残念なことにこれはできない． `fmap` は引数の型だけでなく返り値の型（これは返り値の利用先で決まる）にも依存するが， C++ では仮想関数はテンプレート化できないせいだ．そこで `fmap` を非メンバ関数として実装し，パターンマッチングは `dynamic_cast` で行う．
 
 動的キャストのためには，基本クラスは少なくとも一つの仮想関数を持たねばならないので，デストラクタを仮想関数にする．（これは様々な場面で使える．）
 
@@ -42,7 +42,7 @@ struct Node : public Tree<T> {
 };
 ```
 
-`fmap` 実装の段階では， `Tree` 型による動的ディスパッチの恩恵にあずかることができる． `Leaf` なら `Identity` バージョンの `fmap` を使い， `Node` なら二つの `Tree` 関手による双関手として扱えばよい． ^[?] コードをこういう風に解析するのは C++ プログラマにはあまり馴染みがないかもしれないが，圏論的な思考のよい練習になる．
+`fmap` の実装では， `Tree` 型の動的ディスパッチの恩恵にあずかることができる． `Leaf` なら `Identity` バージョンの `fmap` を使い， `Node` なら二つの `Tree` 関手による双関手として扱えばよい．コードをこういう風に解析するのは C++ プログラマにはあまり馴染みがないかもしれないが，圏論的な思考のよい練習になる．
 
 ```cpp
 tempalte<class A, class B>
