--- a/books/850b20937af93b/8-7.md
+++ b/books/850b20937af93b/8-7.md
@@ -2,7 +2,7 @@
 title: "8.7 プロ関手"
 ---
 
-アロー演算子は，第1の引数については反変で，第2の引数については共変，という性質だった．こういうひねくれもの ^[such a beast] を何と呼ぶのがよいだろうか．返す圏が $\mathbf{Set}$ の場合には， **プロ関手** (profunctor) という名前がある．反変関手は反対圏からの共変関手だったので，プロ関手は次のように定義される．
+アロー演算子は，第1の引数については反変で，第2の引数については共変，という性質だった．こういうひねくれもの ^[原文： such a beast] を何と呼ぶのがよいだろうか．返す圏が $\mathbf{Set}$ の場合には， **プロ関手** (profunctor) という名前がある．反変関手は反対圏からの共変関手だったので，プロ関手は次のように定義される．
 
 $$ \mathbf{C^{op}} \times \mathbf{D} \rightarrow \mathbf{Set} $$
 
