--- a/books/850b20937af93b/8-8.md
+++ b/books/850b20937af93b/8-8.md
@@ -2,7 +2,7 @@
 title: "8.8 Hom 関手"
 ---
 
-これまでの例は，「二つの対象 $a$ と $b$ を取りその間の射の集合である hom　集合 $\mathbf{C}(a,b)$ を返す関手」の，特殊なケースだった．これはつまり，積圏 $\mathbf{C^{op}} \times \mathbf{C}$ から集合の圏 $\mathbf{Set}$ への関手だ．
+これまでの例は，「二つの対象 $a$ と $b$ を取りその間の射の集合である hom　集合 $\mathbf{C}(a,b)$ を返す関手」の，特殊なケースだった．これはつまり，圏の積 $\mathbf{C^{op}} \times \mathbf{C}$ から集合の圏 $\mathbf{Set}$ への関手だ．
 
 この関手が射に対してどのようにふるまうかを定義しよう． $\mathbf{C^{op}} \times \mathbf{C}$ の射とは，つまり圏 $\mathbf{C}$ の射のペアである．
 
