--- a/books/850b20937af93b/9-2.md
+++ b/books/850b20937af93b/9-2.md
@@ -2,31 +2,35 @@
 title: "9.2 カリー化"
 ---
 
-関数対象の候補についてもう一度見てみよう．こんどは射 $g$ を二つの変数 $z$, $a$ の関数として見る．
+関数対象の候補についてもう一度見てみよう．今度は射 $g$ を二つの変数 $z$ と $a$ の関数として見る．
 
 $$ g :: z \times a \rightarrow b $$
 
-積からの射は，2変数の関数と似ている．^[?] $\mathbf{Set}$ の場合であれば， $g$ は変数をふたつ取る関数であって，ひとつは集合 $z$ から，もうひとつは習合 $a$ から来る．
+積からの射は，2変数の関数と似ている． $\mathbf{Set}$ の場合であれば， $g$ は変数をふたつ取る関数であって，ひとつは集合 $z$ から，もうひとつは集合 $a$ から取る．
 
-一方で，普遍性によれば任意の $g$ について， $z$ を関数対象 $a \Rightarrow b$ にマッピング射 $h$ がただ一つ存在する．
+一方で，普遍性によれば任意の $g$ について， $z$ を関数対象 $a \Rightarrow b$ にマッピングする射 $h$ がただ一つ存在する．
 
 $$ h :: z \rightarrow (a \Rightarrow b) $$
 
-集合の圏 $\mathbf{Set}$ でいえば，型 $z$ の引数を取り，$a$ から $b$ への射を返す関数 $h$ が存在するという意味になる．つまり $h$ は高階関数だ．このように，普遍的構成は，二つの変数を取る関数から一つの変数を取る関数への一対一対応を組み立てる．この関係は **カリー化** (currying) と呼ばれる． $h$ は $g$ をカリー化したもの，といことだ．
+集合の圏 $\mathbf{Set}$ でいえば，型 $z$ の引数を取り，$a$ から $b$ への射を返す関数 $h$ が存在するという意味になる．つまり $h$ は高階関数だ．このように普遍的構成は，二つの変数を取る関数から一つの変数を取る関数への一対一対応を組み立てる．この関係は **カリー化** (currying) と呼ばれる． $h$ は $g$ をカリー化したもの，ということだ．
 
 この対応関係は一対一だ．なぜなら，ある $g$ に対して $h$ がただ一つ存在し，任意の $h$ から以下の手順で2引数の関数 $g$ を作ることができるからだ．
 
 $$ g = eval \circ (h \times \mathbf{id}) $$
 
-この $g$ という関数は，いわば **逆にカリー化** (uncurried) した $h$ である．
+この $g$ という関数は，いわば逆にカリー化 (uncurried) された $h$ である．
 
 カリー化は Haskell に文法レベルで組み込まれている．関数を返す関数は
 
-$$ a -> (b -> c) $$
+```haskell
+a -> (b -> c)
+```
 
 という型だが，これはしばしば2引数の関数としても扱われ，括弧を外したシグネチャがそれに相当する．
 
-$$ a -> b -> c $$
+```haskell
+a -> b -> c
+```
 
 複数の引数をとる関数の定義を見れば，これは明らかだ．たとえば，次の関数 `catstr` は，
 
@@ -93,7 +97,7 @@ auto greet = std::bind(catstr, "hello ", _1);
 std::count << greet("Haskell Curry");
 ```
 
-C++ や Java よりも関数型の要素が強い Scala では， C++ と Haskell の中間的な書き方になる．部分適用される可能性のある関数を定義する際には複数の引数リストを使うことができる．
+C++ や Java よりも関数型の性質が強い Scala では， C++ と Haskell の中間的な書き方になる．部分適用される可能性のある関数を定義する際には複数の引数リストを使うことができる．
 
 ```scala
 def catstr(s1: String)(s2: Stirng) = s1 + s2
