--- a/books/850b20937af93b/9-4.md
+++ b/books/850b20937af93b/9-4.md
@@ -10,7 +10,7 @@ title: "9.4 カルテジアン閉圏"
 2. 任意の対象のペアに対して積を持ち
 3. 任意の対象のペアに対して指数対象を持つ
 
-ことが必要である．もし指数対象を積の繰り返し（無限回もありうる）と見れば，カルテジアン閉圏は任意個の引数をとる積の集まりとも言える．すると終対象は零対象との積，あるいは対象の0乗に対応することになる．
+という性質を備える．もし指数対象を積の繰り返し（無限回もありうる）と見れば，カルテジアン閉圏は任意個の引数をとる積の集まりとも言える．すると終対象は零対象との積，あるいは対象の0乗に対応することになる．
 
 計算機科学の観点で興味深いのは，カルテジアン閉圏が型つきラムダ計算モデルをもたらすことだ．これは型プログラミング言語の基礎となる．
 
