--- a/books/850b20937af93b/9-4.md
+++ b/books/850b20937af93b/9-4.md
@@ -19,6 +19,6 @@ title: "9.4 カルテジアン閉圏"
 $$ a \times (b + c) = a \times b + a \times c $$
 $$ (b + c) \times a = b \times a + c \times a $$
 
-を持つカルテジアン閉圏は，**bicartesian 閉圏** (bicartesian closed category)^[訳注：訳語なし] と呼ばれる．ここでも $\mathbf{Set}$ は代表的な例であり，いくつかの興味深い性質を備えている．
+を持つカルテジアン閉圏は，**双カルテジアン閉圏** (bicartesian closed category) と呼ばれる．ここでも $\mathbf{Set}$ は代表的な例であり，いくつかの興味深い性質を備えている．
 
 （和訳：[@takase](https://zenn.dev/takase)）
