--- a/books/850b20937af93b/9-6.md
+++ b/books/850b20937af93b/9-6.md
@@ -2,9 +2,9 @@
 title: "9.6 カリー・ハワード同型対応"
 ---
 
-論理学と代数データ型の対応についてはすでに触れた． `Void` 型と unit 型 `()` は false と true に対応するのだった．直積と直和の型は，論理積 $\land$ (AND)と論理和 $lor$ (OR) に対応する．この場合，関数型は論理包含 $\Rightarrow$ に対応する．つまり `a -> b` という型は「もし a ならば b」と読み替えてもよい．
+論理学と代数データ型の対応についてはすでに触れた． `Void` 型と unit 型 `()` は false と true に対応するのだった．直積と直和の型は，論理積 $\land$ (AND)と論理和 $\lor$ (OR) に対応する．この場合，関数型は論理包含 $\Rightarrow$ に対応する．つまり `a -> b` という型は「もし a ならば b」と読み替えてもよい．
 
-カリー・ハワード同型対応によれば，すべての型は命題，つまり真か偽となる言明^[原文：statement]ないし判断^[原文：judgement]，と解釈できる．このような命題は，その型が **具体性を持つ** (inhabited)（実際に要素を持つ）なら真で，そうでなければ偽である^[?]．特に論理包含はそれに対応する関数型が要素を持つなら真といえる^[?]．つまり関数を実装するということは，定理を証明するのとおなじなのだ．いくつか例を見てみよう．
+カリー・ハワード同型対応によれば，すべての型は命題，つまり真か偽となる言明^[原文：statement]ないし判断^[原文：judgement]，と解釈できる．このような命題は，その型が **具体性を持つ** (inhabited)（実際に要素を持つ）なら真で，そうでなければ偽である．特に論理包含はそれに対応する関数型が要素を持つなら真といえる．つまり関数を実装するということは，定理を証明するのとおなじなのだ．いくつか例を見てみよう．
 
 写像対象の所で導入した `eval` 関数について考えてみる． `eval` のシグネチャはこうだ．
 
@@ -12,11 +12,11 @@ title: "9.6 カリー・ハワード同型対応"
 eval :: ((a -> b), a) -> b
 ```
 
-関数とその引数を取り，適切な型の値を返す，というシグネチャだ． Haskell での射の実装はこうなる．
+関数とその引数を取り，適切な型の値を返す，というシグネチャだ．個の射を Haskell で実装するとこうなる．
 
 $$ eval :: (a \Rightarrow b) \times a \rightarrow b $$
 
-これは関数型 $a \Rightarrow b$ （または指数対象 $b^a$）も定義している．^[?] このシグネチャを，カリー・ハワード同型対応を使って述語論理に変換しよう．
+これは関数の型が $a \Rightarrow b$ （または指数対象 $b^a$）であるということも併せて定義している．このシグネチャを，カリー・ハワード同型対応を使って述語論理に変換しよう．
 
 $$ ((a \Rightarrow b) \land a) \Rightarrow b $$
 
@@ -53,7 +53,7 @@ Void を false に置き換えると次のようになる．
 
 $$ false \rightarrow a $$
 
-矛盾からはあらゆることが導かれる（爆発律^[ex falso quodlibet]）．Haskell によるこの言明（関数）の証明（実装）の一つの例がこれだ．
+矛盾からはあらゆることが導かれる（爆発律^[ex falso quodlibet]）．Haskell によるこの言明の証明（＝関数の実装）の一つの例がこれだ．
 
 ```haskell
 absurd (Void a) = absurd a
