--- a/books/850b20937af93b/9-0.md
+++ b/books/850b20937af93b/9-0.md
@@ -3,8 +3,8 @@ title: "9. 関数型"
 ---
 原文：[9. Function Types](https://bartoszmilewski.com/2015/03/13/function-types/)
 
-ここまで，関数型については言葉を濁してきたが，関数型は他の型とは少し異なる．
+関数型についてはここまで詳しく触れていなかったが，関数型は他の型とは少し異なる．
 
-例えば `Integer` は整数の集合で． `Bool` は二つの要素を持つ集合である．しかし， $a \rightarrow b$ は「 $a$ から $b$ への射の集合」である．このような，任意の圏の二つの対象の間の射の集合を hom 集合　(hom-set) と呼ぶ．圏$\mathbf{Set}$ のすべての hom 集合はそれ自身が 圏 $\mathbf{Set}$ の対象となる．
+例えば `Integer` は整数の集合で． `Bool` は二つの要素を持つ集合である．しかし， $a \rightarrow b$ は単なる集合ではなく， $a$ から $b$ への「射」の集合である．このような，任意の圏の二つの対象の間の射の集合を hom 集合　(hom-set) と呼ぶ． hom 集合は集合なので，当然ながら圏$\mathbf{Set}$ の hom 集合はすべて圏 $\mathbf{Set}$ 自身の対象である．
 
 （和訳：[@takase](https://zenn.dev/takase)）
