--- a/books/850b20937af93b/4-0.md
+++ b/books/850b20937af93b/4-0.md
@@ -1,9 +1,9 @@
 ---
-title: "4. クライスリー圏"
+title: "4. クライスリ圏"
 ---
 原文：[4. Kleisli Categories](https://bartoszmilewski.com/2014/12/23/kleisli-categories/)
 
-型や純粋関数を圏としてモデリングする方法について議論した際に，副作用や純粋でない関数についてもモデリングできると述べた．ここで一つの例として，自身の実行ログや履歴を出力する関数について考えてみよう．命令型言語の場合は，グローバルな状態変数を更新することになるだろう．
+型や純粋関数を圏としてモデリングする方法について議論した際に，副作用や純粋でない関数についてもモデリングできると述べた．その一つの例として，自身の実行ログや履歴を出力する関数について考えてみよう．命令型言語の場合は，グローバルな状態変数を更新することになるだろう．
 
 ```cpp
 string logger;
@@ -14,11 +14,11 @@ bool negate(bool b) {
 }
 ```
 
-これが純粋関数でないことは一目でわかる．純粋関数ならメモ化できるはずだが，仮にこの関数をメモ化しようとしたらログの生成はうまくいかない．つまり，この関数は **副作用** を持っているのだ．
+これが純粋関数でないことは一目でわかる．純粋関数ならメモ化できるはずだが，仮にこの関数をメモ化しようとしたらログの生成はうまくいかない．つまり，この関数は **副作用** (side effects) を持っているのだ．
 
-モダンなプログラミングでは，グローバルな状態の更新を極力避ける．並列実行が複雑になってしまうというだけでも，その理由としては十分だろう．さらには，コードをライブラリにすることもできない．
+モダンなプログラミングではグローバル変数の更新を極力避ける．その理由は，並列実行が複雑になるというだけでも十分だろう．さらにはコードのライブラリ化もできない．
 
-我々にとって都合の良いことに，この副作用のある関数を純粋関数に変換することは可能だ．ログを明示的にすればよいのだ．文字列を引数に追加し，本来の出力と更新された文字列をペアにして返すようにすればよい．
+都合の良いことに，副作用のある関数を純粋関数に変換できる．ログを引数の一つとして明示的に扱えばよいのだ．返り値は本来の出力と更新された文字列のペアにすればよい．
 
 ```cpp
 pair<bool, string> negate(bool b, string logger) {
@@ -26,13 +26,13 @@ pair<bool, string> negate(bool b, string logger) {
 }
 ```
 
-これで副作用は消え，関数は純粋になった．おなじ引数を与えたらいつでもおなじ値と文字列を返してくれるし，必要とあらばメモ化することも可能だ．しかしログは実行のたびに蓄積されるので，メモ化の際には起こりうる引数の履歴の組み合わせ全てに対して保存が必要となる．たとえば，
+これで副作用は消え，関数は純粋になった．おなじ引数を与えたらいつでもおなじ値と文字列を返してくれるし，必要とあらばメモ化も可能だ．しかしログは実行のたびに蓄積されるので，メモ化の際には起こりうる引数の履歴の組み合わせ全てに対して保存が必要となる．たとえば，
 
 ```cpp
 negate(true, "It was the best of times. ");
 ```
 
-や
+や，
 
 ```cpp
 negate(true, "It was the worst of times. ");
@@ -40,9 +40,9 @@ negate(true, "It was the worst of times. ");
 
 などを，別々にメモしておかねばならないということだ．
 
-また，このインターフェースはライブラリ関数としてはいまいちだ．返り値の文字列を無視することはできるので大きな問題はないが，引数の文字列は省略できない．これはとても不便だ．
+また，このインターフェースはライブラリ関数としてはいまいちだ．返り値の方の文字列を無視できるので大きな問題はないが，引数の文字列は省略できない．これはとても不便だ．
 
-もうすこしスマートにする方法はないものだろうか．問題を切り分けることはできないだろうか．今回のようなシンプルな例では，関数 `negate` の一番の目的はある真偽値を受け取ってその逆を返す，というもので，ログの生成機能は付加的なものだ．ここで，関数がメッセージを生成する機能と，それを一つのログファイルにまとめるという機能を分けてみよう．まだ文字列を返す機能が必要なものの，それをログファイルにまとめるという重荷からは解放される．妥協案としては次のようになる．
+もうすこしスマートにする方法はないものだろうか．問題を切り分けることはできないだろうか．今回のようなシンプルな例では，関数 `negate` の一番の目的はある真偽値を受け取ってその逆を返すことで，ログの生成機能は付加的なものだ．そして，「メッセージを生成する機能」は関数固有だが，「メッセージを一つのログファイルにまとめる機能」はそうではない．そこで，この作業の重荷から関数を解放してあげよう．妥協案としては次のようになる．
 
 ```cpp
 pair<bool, string> negate(bool b) {
@@ -87,11 +87,11 @@ vector<string> words(string s) {
 }
 ```
 
-さて， `toUpper` と `toWords` を改造して，従来の返り値の背中に，メッセージ文字列をこっそり乗せてみよう．
+さて， `toUpper` と `toWords` を改造して，元々の返り値の背中にこっそりメッセージを乗せてみよう．
 
 ![](https://storage.googleapis.com/zenn-user-upload/be7d272a86585b2259d5370e.jpg)
 
-2つの関数の返り値を「かざりつけ」るのだ．汎用的なやり方として， `Writer` というテンプレートを新たに定義しよう．この `Writer` テンプレートはペアをカプセル化していて，ひとつめの要素は任意の型 `A` で，ふたつめの要素は文字列になっている．
+いわば，2つの関数の返り値を「装飾する」のだ．そのための汎用的な道具として `Writer` というテンプレートを新たに定義しよう．この `Writer` テンプレートはペアをカプセル化していて，ひとつめの要素は任意の型 `A` で，ふたつめの要素は文字列になっている．
 
 ```cpp
 template<class A>
@@ -113,7 +113,7 @@ Writer<vector<string>> toWords(string s) {
 }
 ```
 
-さらに，この装飾した関数をつかって「文字列を大文字にしてから単語ごとに分割し，その操作を記録する」という関数を組み立ててみよう．こうなる．
+この装飾付き関数を組み合わせると，「文字列を大文字にしてから単語ごとに分割し，その操作を記録する」という関数ができる．
 
 ```cpp
 Writer<vector<string>> process(string s) {
@@ -125,6 +125,6 @@ Writer<vector<string>> process(string s) {
 
 これで目的が達成できた．ログをまとめる作業はもはや個々の関数の役割ではない．それぞれの関数は自身のメッセージだけを生成すればよく，それらは関数の外側で連結される．
 
-このスタイルでプログラム全体が記述されているのを想像してみてほしい．くりかえしだらけでミスしやすい，悪夢のようなコードになるだろう．だが我々はプログラマーだ．そこにくりかえしがあるなら，抽象化してしまえばよい．ただし普通の抽象化とは違って，「関数の合成」を抽象化することになる．合成は圏論の肝なので，コードを書き進める前に圏論的な視点でこの問題を眺めてみよう．
+このような，関数をつなげてい新たな関数をつくるスタイルをプログラム全体に適用すると，くりかえしだらけでミスしやすい悪夢のようなコードになる懸念がある．だが我々はプログラマーだ．そこにくりかえしがあるなら，抽象化してしまえばいい．注意すべきなのは，抽象化したいのが「関数の合成」だという点だ．合成は圏論の肝なので，コードを書き進める前に圏論的な視点でこの問題を眺めてみよう．
 
-（和訳：[@takase](https://zenn.dev/takase)
+（和訳：[@takase](https://zenn.dev/takase)）
