--- a/books/850b20937af93b/4-3.md
+++ b/books/850b20937af93b/4-3.md
@@ -2,8 +2,8 @@
 title: "4.3 クライスリ圏"
 ---
 
-「この圏」は果たして我々の発明なのだろうかと疑問に思う人もいるだろう．「この圏」は**クライスリ圏** (Kleisli category) という，モナドから構成される圏の例になっている．まだモナドについて議論する準備が整っていないが，これを使うと何ができるかについて，さわりだけでも紹介しておこう．我々の限られた目的においては，クライスリ圏の対象を，背景にあるプログラミング言語の型と考える．そして型 A から型 B への射とは，何らかの装飾がついた A から B へ行く関数である．それぞれのクライスリ圏は固有の射の合成方法と，合成の恒等射を持っている．（「装飾」という厳密でない表現が，圏論の自己関手と関連することを後ほどふれる．）
+「この圏」は果たして我々の発明なのだろうかと疑問に思う読者もいるだろう．「この圏」は**クライスリ圏** (Kleisli category) という，モナドから構成される圏のひとつの例だ．まだモナドについて議論する準備が整っていないが，これを使うと何ができるかについて，さわりだけでも紹介しておこう．我々の興味の対象はプログラミングなので，クライスリ圏の対象をあるプログラミング言語の型に，そして型 A から型 B への射を A から B へ行く関数に何らかの装飾がついたものに，それぞれ対応づける．それぞれのクライスリ圏には固有の射の合成方法と，合成の恒等射を定義する．（「装飾」という厳密でない表現は，じつは圏論の「自己関手」と関連していることが後で明らかになる．）
 
-これまで扱ってきた圏のベースになっていたモナドは特に **writer モナド** と呼ばれ，ログや関数の実行履歴を生成するのに使われる．さらにこれは純粋な演算に副作用を持ち込む汎用的な仕組みの例でもあった．プログラミング言語の型と関数を，集合の圏でモデル化できることは以前見たが（例によってボトムは除く），本章ではこのモデルを少し違う圏に拡張していたわけだ．射は装飾付き関数になり，その合成も単に一方の結果を他方に渡すというわけにはいかなかった．この合成自体にはまだ自由度が残っていて，これはすなわちシンプルな表示的意味論をプログラムに付与する余地が残っていることを意味する．これは命令的プログラミング言語が昔から副作用をつかって実装してきたものだ．
+これまで扱ってきた圏のベースになっていたモナドは特に **writer モナド** と呼ばれる．これはログや関数の実行履歴を生成する仕組みであると同時に，純粋な演算に副作用を持ち込む汎用的な仕組みのひとつの例だ．プログラミング言語の型と関数を，集合の圏でモデル化できることは以前見たが（例によってボトムは除く），本章ではこのモデルを少し違う圏に拡張していたわけだ．射は装飾付き関数になり，その合成も単に一方の結果を他方に渡す以上のことをしていた．この合成にはまだ自由度が残っていて，これはすなわち単純な表示的意味論をプログラムに付与する余地が残っていることを意味する．これは従来の命令的プログラミング言語では副作用で実装していたものだ．
 
 （和訳：[@takase](https://zenn.dev/takase)）
