--- a/books/850b20937af93b/6-1.md
+++ b/books/850b20937af93b/6-1.md
@@ -2,7 +2,7 @@
 title: "6-1. 積の型"
 ---
 
-プログラミング言語においてふたつの型の積を実装するための正攻法はペアを使うことだ．ペアは Haskell ではプリミティブな型コンストラクタだし， C++ では標準ライブラリに少し複雑なテンプレートとして定義されている．
+プログラミング言語においてふたつの型の積を実装するための正攻法はペアを使うことだ．ペアは Haskell ではプリミティブな型コンストラクタだし， C++ では標準ライブラリに少し複雑なテンプレートとして用意されている．
 
 ![](https://storage.googleapis.com/zenn-user-upload/f4ebf0115ddbc664258dee84.jpg)
 
@@ -43,7 +43,7 @@ alpha_inv (x, (y, z)) = ((x, y), z)
 
 この入れ子になった2種類のペアは同型だとわかる．パッキングの仕方が違うだけで同じデータだということだ．
 
-ここまで積の型について見てきたが，これを型の間の二項演算と解釈するとどうなるだろうか．先ほどの同型はモノイドの結合律にみえてこないだろうか．
+ここまで積の型について見てきたが，これを型の間の二項演算と解釈するとどうなるだろうか．先ほどの同型が，モノイドの結合律にみえてこないだろうか．
 
 $$ (a * b) * c = a * (b * c) $$
 
@@ -69,21 +69,21 @@ rho_inv x = (x, ())
 
 以上の性質から，集合の圏 $\mathbf{Set}$ は **モノイダル圏** (monoidal category) だと言える．モノイダル圏とは，複数の対象の乗算（ここではカルテジアン積）できるという意味でモノイドになっている圏のことである．ここではもう少しだけモノイダル圏について触れるが，完全な定義は後で行う．
 
-とくに和の型を組み合わせて積の型をつくる場合には，Haskell では複数の引数を取るコンストラクタに名前をつけて使う方法がよく使われる．たとえばペアであれば，次のようになる．
+Haskell で直積型を定義するのには，ペアを使うより一般的な方法がある．これは，とくに直和型と組み合わせるときに便利な方法だ．それは，複数の引数を取るコンストラクタに名前をつけて使うというやり方である．たとえばペアを使う代わりに，次のように `Pair` を定義する．
 
 ```Haskell
 data Pair a b = P a b
 ```
-ここで `Pair a b` は型パラメータ `a` と `b` を引数にとる型で， `P` はデータコンストラクタである．`P` に適切な型をふたつ渡すことでペアの型を定義する，というのが `Pair` の働きだ．たとえば `String` と `Bool` のペアとして `stmt` を定義してみよう．
+ここで `Pair a b` は型パラメータ `a` と `b` を引数にとる型で， `P` はデータコンストラクタである．`P` に適切な型をふたつ渡すことでペアの型を定義するというのが `Pair` の働きだ．たとえば `String` と `Bool` のペアとして `stmt` を定義してみよう．
 
 ```Haskell
 stmt :: Pair String Bool
 stmt = P "This statement is" False
 ```
 
-一行目は型宣言で，`Pair` の定義で `a`, `b` としていた型パラメータを String と Bool に置きかえている．二行目では具体的な文字列と真偽値をデータコンストラクタ `P` に与えて，具体的な `stmt` を生成している．型コンストラクタで型を生成し，データコンストラクタで値を生成しているということだ．
+`Pair` 定義の段階では型パラメータ `a`, `b` としていたものを，この一行目の型宣言で String と Bool に置きかえている．二行目では具体的な文字列と真偽値をデータコンストラクタ `P` に与えて，具体的な `stmt` を生成している．型コンストラクタで型を生成し，データコンストラクタで値を生成しているということだ．
 
-型とデータの名前空間は Haskell では分かれているので，同じ名前を使ってもよい．
+Haskell では型とデータの名前空間は分かれているので，同じ名前が使える．
 
 ```Haskell
 data Pair a b = Pair a b
