--- a/books/850b20937af93b/6-5.md
+++ b/books/850b20937af93b/6-5.md
@@ -9,7 +9,7 @@ data Shape = Circle Float
            | Rect Float Float
 ```
 
-`Shape` を取る関数 `area` はパターンにマッチングをつかって定義できる．
+`Shape` を取る関数 `area` はパターンにマッチングをつかって次のように定義できる．
 
 ```haskell
 area :: Shape -> Float
