--- a/books/850b20937af93b/6-0.md
+++ b/books/850b20937af93b/6-0.md
@@ -3,7 +3,7 @@ title: "6. 単純な代数データ型"
 ---
 原文：[6. Simple Algebraic Data Types](https://bartoszmilewski.com/2015/01/13/simple-algebraic-data-types/)
 
-二つの型を合体させる方法として，積と余積を見てきた．実は，プログラミングで日常的に使用するデータ構造はこの二つのやり方で作ることが可能だ．この事実は実用上重要な意味を持つ．つまりデータ構造の性質の多くは合成可能ということだ．例えば基本的な型が「等しいかどうか」を比較する手段と，それを積と余積の型に適用する方法さえ用意できれば，合成された型の等価演算子は自動的に生成できる． Haskell では合成された型の多くに対して，等号，比較，文字列への（からの）変換，その他たくさんの機能を自動的に生成できる．
+二つの型を合体させる方法として，積と余積を見てきた．実はこれらを使うと，プログラミングで日常的に使用するデータ構造の多くをつくり出せる．この事実は実用上重要な意味を持つ．つまりデータ構造の性質の多くは合成可能ということだ．例えば基本的な型が「等しいかどうか」を比較する手段と，それを積と余積の型に適用する方法さえ用意できれば，合成された型の等価演算子は自動的に生成できる． Haskell では合成された型の多くに対して，等号，比較，文字列への（あるいは文字列からの）変換，その他たくさんの機能を自動的に生成できる．
 
 積と和の型がプログラミングにおいてどのように使えるのか，詳しく見ていこう．
 
