--- a/books/850b20937af93b/6-2.md
+++ b/books/850b20937af93b/6-2.md
@@ -2,7 +2,7 @@
 title: "6-2. レコード"
 ---
 
-シンプルな例を見てみよう．元素の名前と元素記号，そして元素番号を一つのデータ構造で管理したいとする． `(String, String, Int)` というタプルを使い，何番目が何だかを覚えておくというのが一つの方法だ．各要素はパターンマッチングで取り出せるので，元素記号が元素名の頭文字になっているか（たとえば He が Helium の先頭にあるか）を確認する関数は次のように書ける．
+シンプルな例を見てみよう．元素の名前，元素記号，そして元素番号を一つのデータ構造で管理したいとする． `(String, String, Int)` というタプルを使い，何番目が何だかを覚えておくというのが一つの方法だ．各要素はパターンマッチングで取り出せるので，元素記号が元素名の頭文字になっているか（たとえば He が Helium の先頭にあるか）を確認する関数は次のように書ける．
 
 ```Haskell
 startsWithSymbol :: (String, String, Bool)
@@ -29,7 +29,7 @@ elemToTuple :: Element -> (String, String, Int)
 elemToTuple e = (name e, symbol e, atomicNumber e)
 ```
 
-レコードのフィールドにアクセスするための関数は，レコード自身と同じ名前で自動的に定義される．たとえば `e` から `atomicNumber` を取り出すには `atomicNumber e` とすればよく，この関数 `atomicNumber` の型は次のようになる．
+レコードのフィールドにアクセスするための関数は，レコード名と同名で自動的に定義される．たとえば `e` から `atomicNumber` を取り出すには `atomicNumber e` とすればよく，この関数 `atomicNumber` の型は次のようになる．
 
 ```Haskell
 atomicNumber :: Element -> Int
