--- a/books/850b20937af93b/6-4.md
+++ b/books/850b20937af93b/6-4.md
@@ -4,13 +4,13 @@ title: "6-4. 型の代数"
 
 直積型と直和型は，それぞれ単独でも便利なデータ構造を定義できるが，その真骨頂は両者の組み合わせにある．合成のべき乗についてもう一度考えてみよう．
 
-今までに得ている知見をまとめてみよう．議論の対象としてきたのは， `Void` と普通の要素の直和型と，ユニット型 `()` と普通の要素の直積型，という型システムの上の可換なモノイダル構造なのだった．これらを，加算や乗算のアナロジーとして考えてみると， `Void` は数字の 0 に， `()` は数字の 1 に対応付けられる．
+今までに得ている知見をまとめてみよう．議論の対象としてきたのは， `Void` と普通の要素の直和型，あるいはユニット型 `()` と普通の要素の直積型，という型システムの上の可換なモノイダル構造だった．直和・直積を加算・乗算のアナロジーとして考えてみると， `Void` は数字の 0 に， `()` は数字の 1 に対応付けられる．
 
-このアナロジーをもう少し進めてみよう．例えば， 0 との積は 0 になるだろうか？ つまり直積型の片方が `Void` だった場合， `Void` に同型になるだろうか？ `Int` と `Void` のペアはどうなるだろう？
+このアナロジーをもう少し進めてみよう．例えば，何かと 0 との積は 0 になるだろうか？ つまり直積型の片方が `Void` なら，その直積型全体は `Void` に同型になるだろうか？ `Int` と `Void` のペアならどうだろう？
 
-ペアを作るには2つの値が必要だ．整数の値はすぐに思いつくだろうが， `Void` 型には値が存在しない．よっていかなる型 `a` についても `(a, Void)` は値が存在せず，つまりそれは `Void` と同じということだ．これはつまり $a \times  0 = 0$ ということだ．
+ペアを作るには2つの値が必要だ．整数の具体例はすぐに思いつくだろうが， `Void` 型には具体的な値が存在しない．よっていかなる型 `a` についても `(a, Void)` の具体的な値は存在せず，つまりそれは `Void` ということだ．これは $a \times  0 = 0$ に対応する．
 
-自然数の加算・乗算と似ている例としてもうひとつ，分配則について考えよう．
+整数の加算・乗算と似ている例としてもうひとつ，分配則について考えよう．
 
 $$ a \times (b + c) = a \times b + a \times c $$
 
@@ -55,9 +55,9 @@ prod1 = (2, Left "Hi!")
 
 このとき， `case e` の `e` は `Left "Hi!"` になるので， `Left y` のパターンにマッチングし， `y` は `"Hi!"` になる． `x` はすでに `2` にマッチングしているので，`case of` 節の結果は期待通り `Left (2, "Hi!")` となる．
 
-`prodToSum` と `sumToProd` が互いに逆になっているかはここでは確認しないが，そう見えるから多分そうだろう^[原文： if you think about it, they must be!]．結局，同じ情報を2種類のデータ構造に納めているだけなので，データは同じでフォーマットが違うだけのことだ．
+`prodToSum` と `sumToProd` が互いに逆になっているかはここでは確認しないが，そう見えるから多分そうだろう^[原文： if you think about it, they must be!]．実際，同じ情報を2種類のデータ構造に納めているだけなので，データは同じでフォーマットが違うだけのことだ．
 
-数学の世界では，このようにふたつのモノイドが絡み合っているものを **半環** (semiring) と呼ぶ．型の減算に相当するものが定義されていないので「完全な」環ではない．そのため半環は，  n(egative) の無い ring という意味で *rig* とも呼ばれることもある．だがそれを差し引いても，rig をなす自然数などに関する文を，型に関する文に読み替えてみることのメリットは大きい．対応関係を表にまとめておこう．
+数学の世界では，このようにふたつのモノイドが絡み合っているものを **半環** (semiring) と呼ぶ．型の減算に相当するものが定義されていないので「完全な」環ではない．そのため半環は， n(egative) の無い ring という意味で *rig* とも呼ばれることもある．だがそれを差し引いても，rig をなす自然数などに関する文を，型に関する文に読み替えてみることのメリットは大きい．対応関係を表にまとめておこう．
 
 | 自然数 | 型 |
 |-------|----|
@@ -68,19 +68,19 @@ prod1 = (2, Left "Hi!")
 |$2 = 1 + 1$|`data Bool = True | False`|
 |$1 + a$|`data Maybe = Nothing | Just a`|
 
-この考え方を応用すると，興味深いことにリスト型が等式の解として定義できる．型定義において，等号の左右両方に定義したい型自身が登場するのだ．
+この考え方を応用すると，興味深いことにリスト型が等式の解として定義できる．型定義において，等号の左右両方に定義したい型自身（`List a`）が登場するのだ．
 
 ```haskell
 data List a = Nil | Cons a (List a)
 ```
 
-先ほどと同様の置き換えに加え， `List a` を `x` に置き換えると，次の等式を得る．
+先ほどの表の対応関係を使い，さらに `List a` を `x` に置き換えると，次の等式を得る．
 
 ```haskell
 x = 1 + a * x
 ```
 
-いま扱っている代数計算には減算や除算が定義されていないので，この式を `x` について解くことができない．そこで右辺の `x` を `(1 + a * x)` に置き換えて分配則を適用する，という作業を繰り返し行ってみよう．
+いま扱っている代数計算には減算や除算が定義されていないので，この式を `x` について解くことはできない．そこで右辺の `x` を `(1 + a * x)` に置き換えて分配則を適用する，という作業を繰り返し行ってみよう．
 
 ```haskell
 x = 1 + a*x
@@ -96,7 +96,7 @@ x = 1 + a + a*a + a*a*a + a*a*a*a...
 
 変数を含む等式を解くという作業は，代数によく似ている．これが，「代数データ型」という名前の由来だ．
 
-最後に，型を代数的に解釈する際の注意点を一つ示しておく．二つの型 `a` と `b` の積は両方の型の値を含んでいなければならないので，`a` と `b` は両方とも値を持つ型でなければならない．一方，直和型の場合は `a` と `b` のどちらかの値を持てばよいので，どちらかが値を持つ型であれば良い．論理積と論理和も半環をなし，次のように対応づけられる．
+最後に，型を代数的に解釈する際の注意点を一つ示しておく．二つの型 `a` と `b` の積は両方の型の値を含んでいなければならないので，`a` と `b` は両方とも値を持つ型でなければならない．一方，直和型の場合は `a` と `b` のどちらかの値を持てばよいので，どちらかが値を持つ型であれば良い．論理積と論理和による半環の場合，次のような対応関係になる．
 
 |論理|型|
 |---|---|
@@ -105,6 +105,6 @@ x = 1 + a + a*a + a*a*a + a*a*a*a...
 |$a \| b$ | `Either a b = Left a | Right b`|
 |$a \&\& b$|`(a, b)`|
 
-この対応関係を深堀していくと，論理と型理論の間のカリー＝ハワード同型対応にたどり着くのだが，これについては関数型のところで話すことにしよう．
+この対応関係を深堀りしていくと，論理と型理論の間のカリー＝ハワード同型対応にたどり着くのだが，これについては関数型のところで話すことにしよう．
 
 （和訳：[@takase](https://zenn.dev/takase)）
